css/styles.css
body {
    font-family: 'Montserrat', sans-serif;
}

#title {
    background-color: #A760FF;
    color: white;
}

h1 {
    font-size: 3.5rem;
    line-height: 1.5;
    font-weight: 900;
}

h2 {
    font-family: 'Montserrat';
    font-weight: 700;
}

h3 {
    font-family: 'Montserrat', sans-serif;
    font-weight: 900;
}

p {
    color: #8f8f8f;
}

.container-fluid {
    padding: 3% 15% 7%;

}

/* Navigation Bar */

.navbar {
    padding: 0 0 4.5rem;   
}

.navbar-brand {
    font-family: 'Ubuntu';
    font-size: 2.5rem;
    font-weight: 700;
    letter-spacing: -3px;
}

.nav-item {
    padding: 0 18px;
}

.nav-link {
    font-size: 1.2rem;
    font-family: 'Montserrat';
    font-weight: 400;
}

/* Download Buttons */

.download-btn {
    margin: 5% 3% 5% 0%;
}

/* Title Image */

.title-img {
    width: 60%;
    transform: rotate(25deg);
    position: absolute;
    right: 10%;

}

@media (max-width: 1028px) {
    #title {
        text-align: center;
    }

    .title-img {
        position: relative;
        transform: rotate(0deg);
        right: 0;
    }

}

.title-img-container {
    position: relative;
}

/* Features */

#features {
    padding: 7% 10%;
    background-color: white;
    position: relative;
}

.feature-box {
    text-align: center;
    padding: 5%;
}

.icon {
    color: #CA82FF;
    transition: color .2s;
    margin-bottom: 1rem;

}

.icon:hover {
    color: #A760FF;
}

.feature-text {
    width: 80%;
    margin: 0 auto;
    margin-top: 1rem;
}

/* Testimonials */

#testimonials {
    padding: 7% 10%;
    text-align: center;
    background-color: #CA82FF;
    color: white;
}

.testimonial-image {
    width: 10%;
    border-radius: 100%;
    margin: 20px;
}

/* Press */
#press {
    background-color: #CA82FF;
    text-align: center;
    padding-bottom: 3%;
}

.press-logo {
    width: 15%;
    margin: 20px 20px 50px;
    filter: drop-shadow(0px 0px 10px rgba(255,255,255,0.3));
}

/* Pricing */

#pricing {
    padding: 100px;
    text-align: center;
}

.pricing-col {
    padding: 3% 2%;
}

/* CTA */

#cta {
    color: white;
    background-color: #A760FF;
    padding: 5% 10%;
    text-align: center;
}

.cta-btn {
    margin: 5% 2% 0;
}

/* Footer */

#footer {
    background-color: white;
    padding: 5% 10% 3%;
    text-align: center;
}
.copyright {
    margin-bottom: 0;
}
.footer-icon {
    color: black;
    margin: 3% 1%;
}

